--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "scripts": {
         "test:e2e:open": "cypress open"
+    },
+    "devDependencies": {
+        "cypress": "^10.8.0"
     }
 }
