--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "test:e2e:run": "cypress run"
+        "test:e2e:run": "cypress run --headless"
     },
     "devDependencies": {
         "cypress": "^10.8.0"
